fix: isBlank()를 Java 8 지원 코드로 변경